===============================================================
Tag name:  rtm1_0_19
Originator(s): muszala
Date: Feb 19, 2013
One-line Summary:  bring in tws, Volr, r01 rdric file

   Bring VOLR through coupler to CLM.  New r01 rdirc file.  
   Added rtm tests in CLM (test_system).

M    bld/namelist_files/namelist_defaults_rtm.xml
M    src/cpl_share/rtm_cpl_indices.F90
M    src/cpl_mct/rof_comp_mct.F90
M    src/riverroute/RtmMod.F90
M    src/riverroute/RtmHistFlds.F90
M    src/riverroute/RtmHistFile.F90


===============================================================
Tag name:  rtm1_0_18
Originator(s): muszala
Date: Feb 4, 2013
One-line Summary: change rtm_effvel to NULL as default for Erik

   Change rtm_effvel to 'NULL' so 40 is the default physics behavior.
   This is a change from what effvel was set to in rtm1_0_14.

M       src/riverroute/RtmMod.F90

===============================================================
Tag name:  rtm1_0_17
Originator(s): muszala
Date: Feb 1, 2013
One-line Summary:  fix esmf synch error & add RTM_NAMELIST_OPTS/RTM_BLDNML_OPTS 

   Fix bug in esmf clock sync error.  Add  RTM_NAMELIST_OPTS/RTM_BLDNML_OPTS
   to build-namelist in prep. for clm4_0_60 in which 40 and 45 source are
   broken out.  This tag needs to be paired with scripts4_130130.

M       bld/rtm.buildnml.csh
M       src/cpl_esmf/rof_comp_esmf.F90

===============================================================
Tag name:  rtm1_0_16
Originator(s): muszala
Date: Jan 11, 2013
One-line Summary:  add fix for restarts and add history file vars.

	Put in fix from mvertens for restarts.  Add RTMTHRESH and RTMFLOOD as default 
	netcdf output variables.

M       src/riverroute/RtmTimeManager.F90
M       src/riverroute/RtmHistFlds.F90

===============================================================
Tag name:  rtm1_0_15
Originator(s): muszala
Date: Jan 8, 2013
One-line Summary:  add fix for h0 output and change comments in RtmMod.F90
